# advent-of-code

./: .gitignore  README.md
2020/: AoC-1.py  AoC-10.py  AoC-11.py  AoC-12.py  AoC-13.py  AoC-14.py  AoC-16.py  AoC-17.py  AoC-18.py  AoC-19.py  AoC-2.py  AoC-20.py  AoC-21.py  AoC-22.py  AoC-23-cheat.py  AoC-23.py  AoC-24.py  AoC-3.py  AoC-4.py  AoC-5.py  AoC-6.py  AoC-7.py  AoC-8.py  AoC-9.py
2021/: AoC-1.py  AoC-10.py  AoC-11.py  AoC-12.py  AoC-13.py  AoC-14.py  AoC-15.py  AoC-16.py  AoC-18.py  AoC-19-Yoshi.py  AoC-19.py  AoC-2.py  AoC-20.py  AoC-21.py  AoC-22.py  AoC-3.py  AoC-4.py  AoC-5.py  (+4 more)
2023/: Cargo.toml  gen_days.sh
2023/input/my/: day_20.data
2023/src/: data_loader.rs  main.rs  solutions.rs
2023/src/libs/: dir.rs  math.rs  mod.rs  pos_2i.rs  pos_2u.rs  pos_3i.rs  pos_3u.rs  union_find.rs
2023/src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.py  day_24.rs  day_25.rs  day_template.rs
rust/2023/: Cargo.toml
rust/2023/src/: solutions.rs
rust/2023/src/libs/: dir_3d.rs
rust/2023/src/solutions/: day_02.rs  day_06.rs  day_08.rs  day_10.rs  day_12.rs  day_13.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs
rust/2025/: .gitignore  Cargo.toml
rust/2025/src/: solutions.rs
rust/2025/src/libs/: dir_2d.rs  dir_3d.rs  grid_2d.rs  math.rs  pos_2i.rs  pos_2u.rs  pos_3i.rs  pos_3u.rs  union_find.rs
rust/2025/src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_15.rs  day_16.rs  day_20.rs  day_23.rs  day_99.rs  day_template.rs  day_trait.rs
(+146 files in other folders)
