[package]
name = "advent_of_code_2023"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
futures = "0.3"
tokio = { version = "1.22.0", features = ["full"] } 
dotenv = "0.15.0"
itertools = "0.12"
regex = "1.7.0"
cached = "0.46.1"
pathfinding = "4.8.0"
rand = "0.8.5"
