[package]
name = "advent_of_code_2025"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9" }
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
itertools = "0.13.0"
regex = "1.11.1"
cached = "0.54.0"
pathfinding = "4.12.0"
rand = "0.8.5"