[package]
name = "advent_of_code_2025"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.24" }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15.0"
itertools = "0.13.0"
regex = "1.12.2"
cached = "0.54.0"
pathfinding = "4.14.0"
rand = "0.8.5"
log = "0.4.28"